Fix layout: restore centered profile pic on top, keep Home heading visible, reduce bottom margin before footer

--- a/_sass/basic.sass
+++ b/_sass/basic.sass
@@ -13,7 +13,7 @@ body
 article
   background: lighten($dark, 3%)
   margin: 0
-  padding: 1em 0
+  padding: 0.8em 0 0.5em
   box-shadow: none
 
 h1, h2, h3, h4, h5, h6
@@ -71,7 +71,7 @@ img
   border-radius: 50% !important
   object-fit: cover !important
   display: block !important
-  margin: 0 !important
+  margin: 0.3em auto 0.5em !important
 
 
 table
